--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
         "es6": true
     },
     "extends": [
-        "google"
+        "plugin:@wordpress/eslint-plugin/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
