--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@wordpress/eslint-plugin": "^3.3.0",
     "eslint": "^6.8.0",
-    "eslint-config-google": "^0.14.0",
-    "sass": "^1.23.7"
+    "sass": "^1.24.0"
   }
 }
