--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "devDependencies": {
     "@wordpress/eslint-plugin": "^3.3.0",
     "eslint": "^6.8.0",
-    "sass": "^1.24.0"
+    "sass": "^1.24.0",
+    "stylelint": "^12.0.1",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-scss": "^3.13.0"
   }
 }
